fix(@clayui/css): LPD-19394 Removes padding from mark due to spacing issue in autocomplete

--- a/packages/clay-css/src/scss/cadmin/variables/_globals.scss
+++ b/packages/clay-css/src/scss/cadmin/variables/_globals.scss
@@ -811,31 +811,18 @@ $cadmin-hr-margin-y: $cadmin-spacer !default;
 
 $cadmin-mark-bg: #ffe399 !default;
 $cadmin-mark-color: null !default;
-$cadmin-mark-padding: 2px 0.25em 3px 0 !default;
+$cadmin-mark-padding: null !default;
 
 $cadmin-mark: () !default;
 $cadmin-mark: map-deep-merge(
 	(
 		background-color: $cadmin-mark-bg,
-		box-decoration-break: clone,
-		box-shadow: -0.25em 0 0 $cadmin-mark-bg,
 		color: $cadmin-mark-color,
 		display: inline,
 		line-height: normal,
 		padding: $cadmin-mark-padding,
 		position: relative,
 		white-space: pre-wrap,
-		before: (
-			background-color: $cadmin-mark-bg,
-			bottom: 0,
-			content: '',
-			display: block,
-			position: absolute,
-			right: 100%,
-			top: 0,
-			width: 0.25em,
-			z-index: -1,
-		),
 	),
 	$cadmin-mark
 );
@@ -844,11 +831,7 @@ $cadmin-clay-dark-mark: () !default;
 $cadmin-clay-dark-mark: map-deep-merge(
 	(
 		background-color: $cadmin-dark-l2,
-		box-shadow: -0.25em 0 0 $cadmin-dark-l2,
 		color: $cadmin-white,
-		before: (
-			background-color: $cadmin-dark-l2,
-		),
 	),
 	$cadmin-clay-dark-mark
 );
